fix: implement MCP server fixes across 12 tools, remove privesc, rebuild registry
- nmap: add service_scan method, fix XML parsing, add stealth/timing params
- sqlmap: add dump_all/dump_passwords/os_shell/file_read/file_write methods, fix bare except
- hydra: add ssh_brute/ftp_brute/web_form_brute/mysql_brute convenience methods, fix error type mismatch, fix bare excepts
- john: add identify/convert methods, fix unused imports
- searchsploit: add CVE search, mirror method, fix unused imports
- wpscan: add stealthy/force/cookie params, fix version null crash across 5 locations
- web-fingerprint: install mmh3, fix favicon_hash accuracy, update stale docs
- nuclei: add auto_scan/dast_scan methods, add follow_redirects/headers/proxy params
- mongodb: add TLS/URI support, fix _serialize_doc list corruption, fix URI encoding
- ssh: add ssh_options to 4 methods, fix tool.yaml timeout mismatch, add missing chunk_size param
- nosqlmap: replace curl with httpx, add cookie support, fix entry point, fix JSON fallback
- privesc: removed (broken, unmaintained)
- Registry rebuilt: 37 tools, 280 method rows

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -78,8 +78,6 @@ jobs:
               - 'tools/office-exploit/**'
             payload:
               - 'tools/payload/**'
-            privesc:
-              - 'tools/privesc/**'
             searchsploit:
               - 'tools/searchsploit/**'
             sqlite:
@@ -201,7 +199,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        tool: [curl, cve-lookup, enum4linux-ng, exploit-runner, ffuf, ftp, hash-lookup, hydra, ike-scan, john, lfi-rfi, metasploit, mongodb, mysql, netcat, nikto, nmap, nosqlmap, nuclei, office-exploit, payload, playwright, privesc, scapy, searchsploit, shell-session, sqlite, sqlmap, ssh, strongswan, target-tracker, tunnel, web-fingerprint, web-session, wpscan, zap]
+        tool: [curl, cve-lookup, enum4linux-ng, exploit-runner, ffuf, ftp, hash-lookup, hydra, ike-scan, john, lfi-rfi, metasploit, mongodb, mysql, netcat, nikto, nmap, nosqlmap, nuclei, office-exploit, payload, playwright, scapy, searchsploit, shell-session, sqlite, sqlmap, ssh, strongswan, target-tracker, tunnel, web-fingerprint, web-session, wpscan, zap]
 
     permissions:
       contents: read
