--- a/tools/nosqlmap/tool.yaml
+++ b/tools/nosqlmap/tool.yaml
@@ -1,6 +1,6 @@
 name: nosqlmap
 version: "0.7"
-description: "NoSQL injection testing and exploitation tool (native Python implementation, not the nosqlmap CLI). 3 methods: scan (quick test with 3 basic MongoDB operator payloads per URL parameter), inject (targeted injection with 16 built-in MongoDB payloads for auth bypass or data extraction), test_payloads (comprehensive test with 21 payloads including baseline comparison, response length differential, and status code change detection). Supports GET and POST with form or JSON content types. Uses curl internally."
+description: "NoSQL injection testing and exploitation tool (native Python implementation, not the nosqlmap CLI). 3 methods: scan (quick test with 3 basic MongoDB operator payloads per URL parameter), inject (targeted injection with 16 built-in MongoDB payloads for auth bypass or data extraction), test_payloads (comprehensive test with 21 payloads including baseline comparison, response length differential, and status code change detection). Supports GET and POST with form or JSON content types. Uses httpx (async HTTP client) internally."
 image: "ghcr.io/silicon-works/mcp-tools-nosqlmap:latest"
 image_size_mb: 180
 
@@ -49,7 +49,7 @@ resources:
 methods:
   scan:
     description: "Quick scan of a URL for NoSQL injection by testing each URL/POST parameter with 3 basic MongoDB operator payloads ({\"$ne\":\"\"}, {\"$gt\":\"\"}, [$ne]=test). Uses heuristic detection: HTTP 500 (server error processing injected operator) or HTTP 301/302 redirect on auth-related parameters (possible auth bypass). Parses parameters from URL query string and POST data."
-    when_to_use: "First step when testing a web form or API endpoint backed by MongoDB/NoSQL. Provide the URL with query parameters for GET, or URL + data for POST. The tool auto-discovers all parameters and tests each one. Use this for initial detection — if it finds potential injection points, follow up with test_payloads for comprehensive confirmation with baseline comparison. Note: does NOT support cookie parameter — use headers={'Cookie': 'value'} instead."
+    when_to_use: "First step when testing a web form or API endpoint backed by MongoDB/NoSQL. Provide the URL with query parameters for GET, or URL + data for POST. The tool auto-discovers all parameters and tests each one. Use this for initial detection — if it finds potential injection points, follow up with test_payloads for comprehensive confirmation with baseline comparison. Use cookie param for authenticated scans."
     params:
       url:
         type: string
@@ -64,7 +64,10 @@ methods:
         description: "POST body in key=value&key2=value2 format (e.g., 'username=admin&password=test'). Parameters from both URL and data are tested."
       headers:
         type: object
-        description: "Custom HTTP headers as key-value pairs. Use {'Cookie': 'PHPSESSID=abc'} for authenticated scans."
+        description: "Custom HTTP headers as key-value pairs."
+      cookie:
+        type: string
+        description: "Cookie header value for authenticated testing (e.g., 'PHPSESSID=abc123; session=xyz'). Convenience param — alternatively use headers."
       database_type:
         type: string
         default: "MongoDB"
@@ -109,7 +112,10 @@ methods:
         description: "Injection strategy: 'auth_bypass' (first 10 payloads, operator-focused), 'extract_data' (regex/where payloads only), or 'blind' (all 16 payloads)."
       headers:
         type: object
-        description: "Custom HTTP headers. Use {'Cookie': 'PHPSESSID=abc'} for authenticated testing."
+        description: "Custom HTTP headers."
+      cookie:
+        type: string
+        description: "Cookie header value for authenticated testing (e.g., 'PHPSESSID=abc123')."
       timeout:
         type: integer
         default: 60
@@ -147,7 +153,10 @@ methods:
         description: "Content type: 'form' (application/x-www-form-urlencoded) or 'json' (application/json). JSON mode injects payloads as JSON objects into the request body."
       headers:
         type: object
-        description: "Custom HTTP headers. Use {'Cookie': 'PHPSESSID=abc'} for authenticated testing."
+        description: "Custom HTTP headers."
+      cookie:
+        type: string
+        description: "Cookie header value for authenticated testing (e.g., 'PHPSESSID=abc123')."
       success_indicator:
         type: string
         description: "String in the response body that indicates successful injection (e.g., 'Welcome admin', 'Dashboard', 'token'). More reliable than length-based detection."
