--- a/tools/ssh/tool.yaml
+++ b/tools/ssh/tool.yaml
@@ -246,6 +246,10 @@ methods:
         type: boolean
         default: true
         description: "Run chmod +x on the file after upload. Default true."
+      chunk_size:
+        type: integer
+        default: 50000
+        description: "Chunk size for transfer in bytes (before base64 encoding)."
       port:
         type: integer
         default: 22
@@ -300,8 +304,8 @@ methods:
         description: "SSH port."
       timeout:
         type: integer
-        default: 300
-        description: "Total timeout for upload + execution. 300s allows for long enumeration scripts."
+        default: 120
+        description: "Execution timeout in seconds."
       ssh_options:
         type: string
         description: "Additional SSH options string."
