--- a/tools/web-fingerprint/tool.yaml
+++ b/tools/web-fingerprint/tool.yaml
@@ -147,8 +147,8 @@ methods:
         description: "Security header compliance score as 'present/total' (e.g., '4/7')"
 
   favicon_hash:
-    description: "Download /favicon.ico from the target and calculate its MD5 hash for identification purposes. Note: Shodan uses MurmurHash3 (mmh3) for favicon searching, not MD5 — the mmh3 library is not currently installed, so the generated Shodan query may not produce accurate results. The MD5 hash is still useful for identifying and comparing favicons across targets."
-    when_to_use: "During reconnaissance to identify the web application or framework by its favicon. Many default application installations (e.g., Spring Boot, Apache Tomcat, Grafana, Jenkins) have recognizable default favicons. The hash can be used to: identify the application if no other indicators are present, find similar servers via Shodan (note mmh3 limitation), and compare favicons across different ports/vhosts on the same target."
+    description: "Download /favicon.ico from the target and calculate its MurmurHash3 (mmh3) hash for Shodan favicon search, plus MD5 for general identification. The mmh3 hash is Shodan-compatible — the generated Shodan query will produce accurate results. Also returns MD5 for cross-target favicon comparison."
+    when_to_use: "During reconnaissance to identify the web application or framework by its favicon. Many default application installations (e.g., Spring Boot, Apache Tomcat, Grafana, Jenkins) have recognizable default favicons. The hash can be used to: identify the application if no other indicators are present, find similar servers via Shodan using the mmh3 hash (http.favicon.hash:<hash>), and compare favicons across different ports/vhosts on the same target using the MD5 hash."
     params:
       url:
         type: string
@@ -167,10 +167,10 @@ methods:
         description: "Favicon file size in bytes"
       md5:
         type: string
-        description: "MD5 hash of the favicon file content"
+        description: "MD5 hash of the favicon file content (for general identification)"
+      mmh3:
+        type: integer
+        description: "MurmurHash3 hash of the base64-encoded favicon (Shodan-compatible)"
       shodan_query:
         type: string
-        description: "Shodan search query string (note: uses MD5, Shodan actually requires mmh3 hash for accurate results)"
-      note:
-        type: string
-        description: "Caveat about mmh3 vs MD5 hash difference"
+        description: "Ready-to-use Shodan search query string (e.g., 'http.favicon.hash:-12345678')"
